# bloops

./: .gitignore  .gitignore.orig  LICENSE  README.md  audio.py  config.example.json  config.json  config.py  config.schema.json  echolocate.py  filter.py  gpio.py  main.py  noisereduce.py  package-lock.json  package.json  process.py  profile.prof  profile.py  pulse.py  pyproject.toml  record.py  remote.py  repl.py  robin.service  samplebuffer.py  save.py  start  start.sh  stream.py  test_processing.py  util.py
arduino/: tones-and-chirps.ino
batcave/: __init__.py  client.py  debug_override.py  protocol.py
batcave_server/: esbuild.config.js  fake-device.js  package-lock.json  package.json  protocol.js  server.js
config/: asound.conf-dac-0  asound.conf-dac-2
experiments/: repl.py
noisereduce/: __init__.py  build.py  noisereduce.pyx  settings.py  setup.py
overlays/: cs4270.dts
plotting/: util.py
process/: analyze.py  pipeline.py  sample.py  stages.py
python/: .gitignore  chirp_sketch.py  config.py  data.py  emit.py  frames.py  heterodyne.py  loop_sketch.py  main.py  noisereduce.c  noisereduce.py  noisereduce.pyx  outputs.py  process.py  process.py.orig  pulse.py  record.py  repl.py  robin.py  sketch.py  stream.py  test_processing.py  testing.py  util.py  wav.py  we.py
robin/: README.md  audio.py  config.py  constants.py  data.py  devices.py  echolocate.py  emit.py  gpio.py  logger.py  main.py  noisereduce.pyx  output_test.py  process.py  profile.py  pulse.py  record.py  remote.py  repl.py  samplebuffer.py  save.py  stream.py  util.py  wav.py
(+112 files in other folders)
