[tool.poetry]
name = "robin"
version = "1.0.0"
description = ""
authors = ["Ian Reynolds <idreyn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
pyalsaaudio = "^0.10.0"
sounddevice = "^0.4.6"
scipy = "^1.11.3"
pip = "^23.3.1"
rpi-gpio = "^0.7.1"
wavio = "^0.0.8"
evdev = "^1.6.1"
peakutils = "^1.3.4"
prompt-toolkit = "^3.0.39"
python-socketio = "^5.10.0"
requests = "^2.31.0"
websocket-client = "^1.6.4"
click = "^8.1.7"
pydub = "^0.25.1"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
cython = "^3.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
